--- a/Homework16/package.json
+++ b/Homework16/package.json
@@ -3,10 +3,10 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
-  "type": "module",
+  "type": "commonjs",
   "scripts": {
-    "start": "node dist/app.ts",
-    "dev": "ts-node-dev src/app.js",
+    "start": "node dist/app.js",
+    "dev": "ts-node-dev src/app.ts",
     "build": "tsc",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -14,10 +14,16 @@
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.20.2",
+    "cors": "^2.8.5",
+    "cors-ts": "^1.0.3",
     "express": "^4.18.2",
-    "http": "^0.0.1-security"
+    "helmet": "^6.0.1",
+    "http": "^0.0.1-security",
+    "morgan": "^1.10.0"
   },
   "devDependencies": {
+    "@types/express": "^4.17.17",
+    "@types/morgan": "^1.9.4",
     "nodemon": "^2.0.20",
     "ts-node-dev": "^2.0.0",
     "typescript": "^4.9.5"
