--- a/Homework17/package.json
+++ b/Homework17/package.json
@@ -13,12 +13,14 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@typegoose/typegoose": "^10.3.0",
     "body-parser": "^1.20.2",
     "cors": "^2.8.5",
     "cors-ts": "^1.0.3",
     "express": "^4.18.2",
     "helmet": "^6.0.1",
     "http": "^0.0.1-security",
+    "mongoose": "~6.10.0",
     "morgan": "^1.10.0"
   },
   "devDependencies": {
